JVM提交